very WIP static typing validation